<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.lbs.view.LoginActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="255dp"
            android:layout_height="189dp"
            app:srcCompat="@drawable/lbslogonew"
            android:layout_marginLeft="50dp"/>



        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeActionId="6"
            android:imeActionLabel="@string/username"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="200dp"
            android:textAlignment="center"/>



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="275dp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/signupBut"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="340dp"
            android:text="@string/action_signup"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/loginBut"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="390dp"
            android:text="@string/action_login"
            android:textStyle="bold"
            />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>